argocd/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: welcome
    app.kubernetes.io/instance: welcome
  name: welcome
spec:
  replicas: 1
  selector:
    app: welcome
    deploymentconfig: welcome
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/container.welcome.image.entrypoint: '["./hello.sh"]'
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: welcome
        deploymentconfig: welcome
    spec:
      containers:            
      - image: quay.io/eformat/welcome@sha256:83341ea1289e4a9801c09efffa87e3b209c69642bc7ff6ec9c562f588443ef1
        imagePullPolicy: Always
        name: welcome
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - type: ImageChange      
    imageChangeParams:
      automatic: true
      containerNames:
      - welcome
      from:
        kind: ImageStreamTag
        name: welcome:latest
