argocd/welcome-template.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: welcome-template
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: welcome
    name: welcome
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: welcome
      deploymentconfig: welcome
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: welcome
    name: welcome
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: welcome
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 2
    labels:
      app: welcome
    name: welcome
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: eformat/welcome
      from:
        kind: DockerImage
        name: docker.io/eformat/welcome:latest
      generation: 2
      importPolicy: {}
      name: latest
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: welcome
    name: welcome
  spec:
    replicas: 1
    selector:
      app: welcome
      deploymentconfig: welcome
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/container.welcome.image.entrypoint: '["./hello.sh"]'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: welcome
          deploymentconfig: welcome
      spec:
        containers:
        - image: eformat/welcome:latest
          imagePullPolicy: Always
          name: welcome
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - type: ImageChange      
      imageChangeParams:
        automatic: true
        containerNames:
        - welcome
        from:
          kind: ImageStreamTag
          name: welcome:latest
  status: {}
